// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`roles > create 1`] = `
"name: test_role
created_at: 2019-01-01T00:00:00.000Z
"
`;

exports[`roles > delete 1`] = `
"name: test_role
created_at: 2016-11-16T15:39:18.000Z
"
`;

exports[`roles > list 1`] = `
"- name: test_role
  created_at: 2016-01-01T00:00:00Z
"
`;
